# PDFEditor

./: README.md
.cursor/rules/: pdfeditor-chart-block.mdc  pdfeditor-core.mdc  pdfeditor-desktop.mdc  pdfeditor-docs-funcionalidades.mdc  pdfeditor-document-blocks.mdc  pdfeditor-export.mdc  pdfeditor-linked-excel-tables.mdc  pdfeditor-module-size.mdc  pdfeditor-testing-workflow.mdc  pdfeditor-tests-layout.mdc  pdfeditor-translation.mdc
.github/: copilot-instructions.md  todo.md
app/: .env.example  coverage-out.txt  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js  vitest.config.ts  vitest.setup.ts
app/coverage/: lcov.info
app/coverage/lcov-report/: index.html
app/scripts/: strip-import-js.mjs
app/src/: main.js  main.jsx  main.ts  style.css
app/src/app/: activityLog.ts  aiApply.js  aiApply.page.test.ts  aiApply.ts  aiApplyDocFormat.ts  aiApplyPage.ts  aiApplyParsing.test.ts  aiApplyParsing.ts  aiBlockSerialize.ts  aiChartFromAction.ts  aiFlow.js  aiFlow.ts  aiLayout.js  aiMarkdown.js  aiMarkdownParser.js  aiMarkdownParser.ts  aiPrompts.js  aiPrompts.mode.test.ts  aiPrompts.test.ts  aiPrompts.ts  aiTableDataOps.test.ts  aiTableDataOps.ts  aiTableFromAction.test.ts  (+61 more)
desktop/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
desktop/scripts/: check-cargo.mjs  make-icon.mjs  setup-chromium.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  hub_ia.rs  lib.rs
docs/: linked-excel-tables.md
(+226 files in other folders)
